--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 html{
   font-size: 100%;
   font-family: "mainFont";
-  overflow-y: scroll;;
+  overflow-y: scroll;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
@@ -28,146 +28,104 @@ html{
   src:url("../fonts/iconFont/PWHandySocialIcons.ttf");
 }
 
-input{
-  -webkit-transition: color 0.7s ease-in;
-  -moz-transition: color 0.7s ease-in;
-  transition: color 0.7s ease-in;
-  -webkit-transition: background 1.2s ease-out;
-  -moz-transition: background 1.2s ease-out;
-  transition: background 1.2s ease-out;
-
-  width: 15vh;
-  height: 6vh;
-  font-size: 2vh;
-  font-weight: 900;
-  color:rgb(114, 99, 99);
-  position: absolute;
-  font-family: "secFont";
-  background: rgb(255, 191, 191);
-  moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
-  border:0;
-
+header {
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #0683c9;
+    -webkit-transition: height 0.3s;
+    -moz-transition: height 0.3s;
+    -ms-transition: height 0.3s;
+    -o-transition: height 0.3s;
+    transition: height 0.3s;
 }
-input:active,
-input:hover {
-  outline: 0;
+header h1#logo {
+    display: inline-block;
+    height: 150px;
+    line-height: 150px;
+    float: left;
+    font-family: "Oswald", sans-serif;
+    font-size: 60px;
+    color: white;
+    font-weight: 400;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
-
-
-input:hover{
-  color: rgb(255, 191, 191);
-  -webkit-transition: color 0.7s ease;
-  -moz-transition: color 0.7s ease;
-  transition: color 0.7s ease;
-  background: #ed7676;
-  -webkit-transition: background 0.7s ease;
-  -moz-transition: background 0.7s ease;
-  transition: background 0.7s ease;
+header nav {
+    display: inline-block;
+    float: right;
 }
-
-button:before{
-/*  font-size: 0;
-  -webkit-transition: font-size 0.7s ease-in;
-  -moz-transition: font-size 0.7s ease-in;
-  transition: font-size 0.7s ease-in;
-
-  background: rgb(114, 99, 99);
-  -webkit-transition: background 0.7s ease;
-  -moz-transition: background 0.7s ease;
-  transition: background 0.7s ease;
-    */
-  content: 'Thank You!';
-  visibility: visible;
+header nav a {
+    line-height: 150px;
+    margin-left: 20px;
+    color: #9fdbfc;
+    font-weight: 700;
+    font-size: 18px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
-
-jQuery('button').click(function(){
-   jQuery(this).toggleClass('active');
-});
-
-input{
-
+header nav a:hover {
+    color: white;
 }
-nav {
-  width: 11vh;
-  height: 5vh;
-  position: absolute;
-  top:2vh;
-  left: 5vh;
-  font-family: "mainFont";
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
+header.smaller {
+    height: 75px;
 }
-nav > ul {
-  width: 11vh;
-  height: 5vh;
-
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: inline-block;
-  background: #ddd;
-  border-radius: 5px;
+header.smaller h1#logo {
+    width: 150px;
+    height: 75px;
+    line-height: 75px;
+    font-size: 30px;
 }
-nav > ul > li {
-  float: center;
-  width: 11vh;
-  height: 5vh;
-  line-height: 5vh;
-  position: relative;
-  text-transform: uppercase;
-  font-size: 2vh;
-  color: rgba(0, 0, 0, 0.7);
-  cursor: pointer;
-}
-nav > ul > li:hover {
-  background: #d5d5d5;
-  border-radius: 5px;
+header.smaller nav a {
+    line-height: 75px;
 }
 
-ul.drop-menu {
-  position: absolute;
-  top: 100%;
-  left: 0%;
-  width: 100%;
-  padding: 0;
-}
-ul.drop-menu li {
-  width: 11vh;
-  height: 5vh;
-  background: #666;
-  color: rgba(255, 255, 255, 0.7);
-}
-ul.drop-menu li:hover {
-  background: #606060;
-}
-ul.drop-menu li:last-child {
-  border-radius: 0px 0px 5px 5px;
+@media all and (max-width: 660px) {
+    header h1#logo {
+        display: block;
+        float: none;
+        margin: 0 auto;
+        height: 100px;
+        line-height: 100px;
+        text-align: center;
+    }
+    header nav {
+        display: block;
+        float: none;
+        height: 50px;
+        text-align: center;
+        margin: 0 auto;
+    }
+    header nav a {
+        line-height: 50px;
+        margin: 0 10px;
+    }
+    header.smaller {
+        height: 75px;
+    }
+    header.smaller h1#logo {
+        height: 40px;
+        line-height: 40px;
+        font-size: 30px;
+    }
+    header.smaller nav {
+        height: 35px;
+    }
+    header.smaller nav a {
+        line-height: 35px;
+    }
 }
 
-ul.drop-menu li {
-  display: none;
-}
-
-li:hover > ul.drop-menu li {
-  display: block;
-}
 
 body {
   color: #000000;
