--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ html {
   font-size: 100%;
   width: 100%;
   -webkit-text-size-adjust: 100%;
-  background-color: #056f68;
+  background-color: #0c1423;
 }
 
 body {
@@ -312,7 +312,7 @@ body {
   left: 0;
   height: 100%;
   width: 100%;
-  background: rgba(26, 132, 132, 0.6);
+  background: rgba(41, 63, 105, 0.6);
   z-index: 0; }
 .sect-banner .v-center {
   position: relative;
