--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@
 html{
   font-size: 100%;
   font-family: "mainFont";
-  overflow-y: scroll;
+  overflow-y:scroll;
+   overflow : scroll;
+position:relative;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
@@ -130,6 +132,7 @@ header.smaller nav a {
 
 
 body {
+   overflow : scroll;
   color: #000000;
   margin: 0;
   height: 100%;
@@ -144,6 +147,7 @@ body {
 html, body {
   position: relative;
   overflow-x: hidden;
+   overflow : scroll;
 }
 
 *, *:before, *:after {
@@ -288,9 +292,11 @@ html {
   width: 100%;
   -webkit-text-size-adjust: 100%;
   background-color: #0c1423;
+   overflow : scroll;
 }
 
 body {
+   overflow : scroll;
   -webkit-animation: fade-in ease-in-out 1.4s;
   -moz-animation: fade-in ease-in-out 1.4s;
   animation: fade-in ease-in-out 1.4s; }
@@ -310,7 +316,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 300%;
   width: 100%;
   background: rgba(41, 63, 105, 0.6);
   z-index: 0; }
@@ -331,6 +337,7 @@ body {
     animation: fade-in ease-in-out 2s 0.5s both;
   }
   .sect-banner .v-center p {
+
     line-height: 2;
     font-size: 2.5vh;
     -webkit-animation: fade-in ease-in-out 2s 1s both;
@@ -395,9 +402,9 @@ body {
       width: 100%;
       text-align: center;
       color: rgba(255, 255, 255, 0.8);
-      position: fixed;
+      position: relative;
       z-index: 8;
-      bottom: 1em;
+      bottom: 1vh;
     }
 
       @-webkit-keyframes fade-in {
