--- a/css/styles.css
+++ b/css/styles.css
@@ -402,7 +402,7 @@ body {
       width: 100%;
       text-align: center;
       color: rgba(255, 255, 255, 0.8);
-      position: relative;
+      position: fixed;
       z-index: 8;
       bottom: 1vh;
     }
