--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ position:relative;
 }
 
 header {
-
     width: 100%;
     height: 150px;
     overflow: hidden;
@@ -72,7 +71,7 @@ header nav {
     float: right;
 }
 header nav a {
-  margin-right: 35px;
+  margin-right: 20px;
     line-height: 150px;
 
     color: #9fdbfc;
@@ -94,6 +93,7 @@ header.smaller {
     height: 75px;
 }
 header.smaller h1#logo {
+    top: 100px;
     width: 150px;
     height: 75px;
     line-height: 75px;
